<resources>
    <string name="app_name">onepass</string>
    <string name="main_no_data_top">No Passport</string>
    <string name="main_no_data_bottom">passport will appear here</string>
    <string name="label_no_data_top">No Label</string>
    <string name="label_no_data_bottom">label will appear here</string>
    <string name="search_no_data">oops,no search results</string>
    <string name="search_cancel">Cancel</string>
    <string name="search_first">Please input keywords.</string>
    <string name="setting_tag">Common setting</string>
    <string name="secure_lock">No action lock after 20 seconds.</string>
    <string name="secure_clear">Automatic clear clipboard after 1min</string>
    <string name="secure_fingerprintsatrt">Unlocking fingerprint</string>
    <string name="secure_floatwindowstart">Open suspension window</string>
    <string name="secure_passwordupdate">Change Password</string>
    <string name="head_password">Please enter the password you set.</string>
    <string name="head_first_password">Please set up four password.</string>
    <string name="password_incorrect">Incorrect password.Please retype.</string>
    <string name="password_correct">Success</string>
    <string name="changetofingerprintframenttv">Fingerprint verification</string>
    <string name="fingerprint">verify fingerprint information</string>
    <string name="changetonumframentv">Password verification</string>
    <string name="secret_title_hint">Please input your title</string>
    <string name="secret_user_hint">Please input your account ID</string>
    <string name="secret_password_hint">Please input your password.</string>
    <string name="secret_label_hint">Add labels</string>
    <string name="user_copy">The user name has been copied to the paste board.</string>
    <string name="password_copy">The password has been copied to the paste board.</string>
    <string name="user_empty">User name can not be empty.</string>
    <string name="title_empty">The title should not be empty.</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="revoke">revoke</string>
    <string name="delete">delete</string>
    <string name="normal_delete">Do you want to delete the </string>
    <string name="normal_delete_help"></string>
    <string name="update_delete">Do you want to revoking ?</string>
    <string name="add_delete">Will not save your information.</string>
    <string name="back">clean</string>
    <string name="data_title">Data output and restore</string>
    <string name="data_excel">Output Excel</string>
    <string name="data_excel_unsuccess">"Sorry,I don't have access to storage"</string>
    <string name="data_excel_none">"Sorry,you don't have passport"</string>
    <string name="data_excel_success">"The file has been successfully saved to the internal storage/record folder"</string>
    <string name="data_backup">Data backup</string>
    <string name="data_store">Data store</string>
    <string name="data_backup_success">Data backup success</string>
    <string name="data_store_success">Data restore success</string>
    <string name="data_backup_failed">Data backup failed</string>
    <string name="data_store_failed">Data restore failed</string>
    <string name="data_restore_remind_message">Your current data will be cleared,do you want to restore it?</string>
    <string name="data_retore_remind_title">Restore of warning</string>
    <string name="guide_copy">You can click the copy button to copy</string>
    <string name="guide_float">You can click and copy directly</string>
    <string name="guide_button">OK</string>
    <string name="setting">Settings</string>
    <string name="float_permission_message">Your phone does not grant suspension window permission</string>
    <string name="main_guide_bt_text">Experience\nImmediately</string>
    <string name="main_guide_text_top_first">Quick copy,just one step</string>
    <string name="main_guide_text_top_second">Multiple Encryption,safety protection</string>
    <string name="main_guide_text_top_third">Data backup,one-click recovery</string>
    <string name="main_guide_text_bottom_first">Make your login easy and quick</string>
    <string name="main_guide_text_bottom_second">Keep your password information private</string>
    <string name="main_guide_text_bottom_third">So that you no longer have \nto worry about data loss</string>
    <string name="original_password">original password</string>
    <string name="old_four_digit_password">old four digit password</string>
    <string name="Change_password">Change password</string>
    <string name="New_password">New password</string>
    <string name="Confirm_new_password">Confirm new password</string>
    <string name="Ascertaining_modification">Ascertaining modification</string>
    <string name="Confirm_the_original_password">Confirm the original password</string>
    <string name="The_password_is_wrong">The password is wrong</string>
    <string name="Password_modification_succeeded">Password modification succeeded</string>
    <string name="Failed_to_modify_password">Failed to modify password</string>

</resources>
