<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/Change_password"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@mipmap/close_icon_white" />
    </RelativeLayout>


        <TextView
            android:layout_width="348dp"
            android:layout_height="40dip"
            android:gravity="center_vertical"
            android:text="@string/Change_password"
            android:layout_marginLeft="20dp"
            android:textSize="15sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/newpasswordedittext"
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:hint="@string/New_password"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:textColor="@color/label_line_color"
            android:textSize="15sp" />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/label_line_color"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/surepasswordedittext"
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/Confirm_the_original_password"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:textColor="@color/label_line_color"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/surepasswordbt"
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Ascertaining_modification"
            android:layout_gravity="center"
            android:textColor="@color/windowBackground"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>